--- a/index.html
+++ b/index.html
@@ -5,58 +5,59 @@
     <title>Marigold Performing Arts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
-        <div class="logo">Marigold Performing Arts</div>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#faculty">Faculty</a>
-            <a href="#events">Events</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
+<header>
+    <div class="logo">Marigold Performing Arts</div>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#faculty">Faculty</a>
+        <a href="#events">Events</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
 
-    <section class="hero">
-        <h1>Celebrating the Art of Indian Classical Tradition</h1>
-        <p>Dance. Music. Heritage.</p>
-    </section>
+<section class="hero">
+    <div class="hero-overlay">
+        <h1>Preserving Tradition.<br> Inspiring Excellence.</h1>
+        <p>Indian Classical Dance & Music</p>
+    </div>
+</section>
 
-    <section id="about" class="section">
-        <h2>About</h2>
-        <p>
-            Marigold Performing Arts is dedicated to nurturing excellence in Indian classical
-            dance and music.
-        </p>
-    </section>
+<section id="about" class="section">
+    <h2>About</h2>
+    <p>
+        Marigold Performing Arts is devoted to preserving the depth, discipline,
+        and spiritual richness of Indian classical traditions. We cultivate artistry,
+        technique, and cultural pride through immersive training in dance and music.
+    </p>
+</section>
 
-    <section id="faculty" class="section light">
-        <h2>Faculty</h2>
-        <div class="faculty-grid">
-            <div class="faculty-card">
-                <h3>Founder Name</h3>
-                <p>Kathak Artist & Instructor</p>
-            </div>
-        </div>
-    </section>
+<section id="faculty" class="section light">
+    <h2>Founder & Faculty</h2>
+    <div class="faculty-card">
+        <h3>Your Name</h3>
+        <p>Kathak Artist | MFA in Dance</p>
+    </div>
+</section>
 
-    <section id="events" class="section">
-        <h2>Events</h2>
-        <p>Workshops, student showcases, and performances.</p>
-    </section>
+<section id="events" class="section">
+    <h2>Events</h2>
+    <p>Workshops, lecture-demonstrations, student showcases, and community performances.</p>
+</section>
 
-    <section id="contact" class="section light">
-        <h2>Contact</h2>
-        <p>Email: marigoldperformingarts@gmail.com</p>
-    </section>
+<section id="contact" class="section light">
+    <h2>Contact</h2>
+    <p>Email: marigoldperformingarts@gmail.com</p>
+</section>
 
-    <footer>
-        © 2026 Marigold Performing Arts LLC
-    </footer>
+<footer>
+    © 2026 Marigold Performing Arts LLC
+</footer>
 
 </body>
 </html>
