--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title>Marigold Performing Arts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
@@ -22,8 +24,8 @@
 </header>
 
 <section class="hero">
-    <div class="hero-overlay">
-        <h1>Preserving Tradition.<br> Inspiring Excellence.</h1>
+    <div class="hero-content">
+        <h1>Preserving Tradition. Inspiring Grace.</h1>
         <p>Indian Classical Dance & Music</p>
     </div>
 </section>
@@ -31,9 +33,9 @@
 <section id="about" class="section">
     <h2>About</h2>
     <p>
-        Marigold Performing Arts is devoted to preserving the depth, discipline,
-        and spiritual richness of Indian classical traditions. We cultivate artistry,
-        technique, and cultural pride through immersive training in dance and music.
+        Marigold Performing Arts is devoted to nurturing excellence in Indian classical 
+        traditions. We cultivate discipline, artistry, and cultural depth through 
+        immersive training in dance and music.
     </p>
 </section>
 
@@ -42,12 +44,18 @@
     <div class="faculty-card">
         <h3>Your Name</h3>
         <p>Kathak Artist | MFA in Dance</p>
+        <p>
+            Dedicated to preserving the integrity of Indian classical form while 
+            creating meaningful artistic experiences for students and audiences.
+        </p>
     </div>
 </section>
 
 <section id="events" class="section">
-    <h2>Events</h2>
-    <p>Workshops, lecture-demonstrations, student showcases, and community performances.</p>
+    <h2>Upcoming Event</h2>
+    <div class="poster-container">
+        <img src="poster.jpg" alt="Marigold Workshop Poster">
+    </div>
 </section>
 
 <section id="contact" class="section light">
