--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <div class="logo">Marigold Performing Arts</div>
     <nav>
         <a href="#about">About</a>
-        <a href="#faculty">Faculty</a>
         <a href="#events">Events</a>
         <a href="#contact">Contact</a>
     </nav>
@@ -34,31 +33,25 @@
     <h2>About</h2>
     <p>
         Marigold Performing Arts is devoted to nurturing excellence in Indian classical 
-        traditions. We cultivate discipline, artistry, and cultural depth through 
-        immersive training in dance and music.
+        traditions. Rooted in discipline, depth, and cultural integrity, the academy 
+        offers immersive training in dance and music while cultivating artistic 
+        expression and confidence.
+    </p>
+    <p style="margin-top:20px;">
+        Founded with a vision to create meaningful artistic experiences, Marigold 
+        Performing Arts bridges heritage and contemporary presentation, bringing 
+        Indian classical traditions to a global stage.
     </p>
 </section>
 
-<section id="faculty" class="section light">
-    <h2>Founder & Faculty</h2>
-    <div class="faculty-card">
-        <h3>Your Name</h3>
-        <p>Kathak Artist | MFA in Dance</p>
-        <p>
-            Dedicated to preserving the integrity of Indian classical form while 
-            creating meaningful artistic experiences for students and audiences.
-        </p>
-    </div>
-</section>
-
-<section id="events" class="section">
+<section id="events" class="section light">
     <h2>Upcoming Event</h2>
     <div class="poster-container">
         <img src="poster.jpg" alt="Marigold Workshop Poster">
     </div>
 </section>
 
-<section id="contact" class="section light">
+<section id="contact" class="section">
     <h2>Contact</h2>
     <p>Email: marigoldperformingarts@gmail.com</p>
 </section>
