--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <h2>Upcoming Event</h2>
     <div class="poster-container">
         <img src="poster.jpg" alt="Marigold Workshop Poster">
-    </div>
+    </div> class="poster-container">
+        <img src="SPANDAN Flyer.png" alt="Marigold Workshop Poster">
 </section>
 
 <section id="contact" class="section">
