--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
     <h2>Upcoming Event</h2>
     <div class="poster-container">
         <img src="poster.jpg" alt="Marigold Workshop Poster">
-    </div> class="poster-container">
-        <img src="SPANDAN Flyer.png" alt="Marigold Workshop Poster">
+    </div> 
+    
+    <div class="poster-container">
+        <img src="spandan-flyer.png" alt="Spandan Event Flyer">
+    </div>
 </section>
 
 <section id="contact" class="section">
